--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,3 @@
-# This is the official list of db-rs Authors for copyright purpose.
+# This is the official list of bd Authors for copyright purpose.
 
 prataprc <prataprc@gmail.com>
